test/compile_errors/stage1/obj/non-integer_tag_type_to_automatic_union_enum.zig
const Foo = union(enum(f32)) {
    A: i32,
};
export fn entry() void {
    const x = @typeInfo(Foo).Union.tag_type.?;
    _ = x;
}

// non-integer tag type to automatic union enum
//
// tmp.zig:1:24: error: expected integer tag type, found 'f32'
